2004-11-05 Dario Massarin <nekkar@libero.it>
        * New system tray icon effects. This has been realized looking at the 
        amarok code. In the future, when other things will be in place, I will
        surely paint an icon filled according to the current downloading progress.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Delayed initialization. This should speed up the application startup
        especially when the user has lots of transfers.

2004-11-05 Dario Massarin <nekkar@libero.it>
        * Cleanups all over the code.
        
        * interrogator.h: Now we have this new file that defines the two classes
        TransferInterrogator and GroupInterrogator. If a class wants to interrogate
        a transfer or a group object it should reimplement them.
        
        * group.{h,cpp}: The progressed size, totalSize and percent properties are
        not saved anymore to file. Now we update the group properties every time
        we see that a transfer that belongs to the group has changed. Each group 
        change is notified to all the views.        
        
        * mainview.cpp: fixed crash when executing actions on a group item.

2004-10-17 Dario Massarin <nekkar@libero.it>
    
        * transfer.{h,cpp}: New class TransferInterrogator that abstracts the
        objects that can "interrogate" the Transfers using the function
        changesFlags(TransferInterrogator *). In this way not only the views
        can do it but also, for example, the GroupList objects.

        * group.{h,cpp}: The Group class has been further developed to keep
        global statistics on its transfers. There is still lots of work to do.
        
        * mainview.{h,cpp}: Tried to achieve a better look&feel. I'm not very
        happy with the final result, yet.

2004-10-16 Dario Massarin <nekkar@libero.it>
    
        * Added license statements.
        
        * mainview.cpp: Some more work on the groups.
